--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /captures
 .externalNativeBuild
 .cxx
+/app/src/main/res/layout/activity_configurepc.xml
+/app/src/main/java/com/example/madproject/configurepc.java
