--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.computersolutions">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,19 +11,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".myWishlist">
+        <activity android:name=".Activity.UserProfileActivity"></activity>
+        <activity android:name=".Activity.UpdateProfile"></activity>
+        <activity android:name=".Activity.Authentication.LoginActivity"></activity>
+        <activity android:name=".Activity.Authentication.PaymentActivity"></activity>
+        <activity android:name=".Activity.Authentication.ForgotPassword"></activity>
+        <activity android:name=".Activity.Authentication.RegisterActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".updateProfile"></activity>
-        <activity android:name=".signupnext"></activity>
-        <activity android:name=".ForgotPassword"></activity>
-        <activity android:name=".UserProfile"></activity>
-        <activity android:name=".Signup"></activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity">
+
+        </activity>
 
         <meta-data
             android:name="preloaded_fonts"
