part update delete function

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".bottomNavbar.bottomanavbar">
+        <activity android:name=".bottomNavbar.bottomnavbar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".cart" />
         <activity android:name=".updateconfig" />
@@ -43,12 +47,10 @@
         </activity>
         <activity android:name=".viewparts" />
         <activity android:name=".AdminPage">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
+        <activity android:name=".selectPart"/>
+        <activity android:name=".updatedelete_part"/>
         <!-- end -->
         <meta-data
             android:name="preloaded_fonts"
